--- a/report/BSc_group_p.tex
+++ b/report/BSc_group_p.tex
@@ -1,5 +1,6 @@
 \documentclass{article}
 \usepackage{graphicx}
 \begin{document}
-Hello, DevOps!
+    Hello DevOps \\
+    Attempts: ii
 \end{document}
